--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ ext {
     junitVersion = '5.10.2'
 }
 
-sourceCompatibility = '20'
-targetCompatibility = '20'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'com.beginner.steamlabs'
-    mainClass = 'com.beginner.steamlabs.StreamLibrary'
+    mainClass = 'com.beginner.steamlabs.controlCircle.ControlCircleWithoutEventHandling'
 }
 
 javafx {
